--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ana Victoria Ponce-Bobadilla"
-  avatar           : "AVPB.jpg"
+  avatar           : "AVPB_photo.JPG"
   bio              : "I am a postdoctoral researcher at the Institute of Computational Medicine, Heidelberg University."
   location         : "Heidelberg, Germany"
   employer         :
