--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,15 @@
 # main links links
 main:
+
+  - title: "Research"
+    url: /research/  
+
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+    url: /publications/       
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+
+  - title: "Contact"
+    url: /contact/
     
-  - title: "Guide"
-    url: /markdown/
