fixed adding new lines with correct command

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ana Victoria \newline Ponce-Bobadilla"
+  name             : "Ana Victoria \n \n Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
   bio              : "Applied Mathematician \n Postdoctoral researcher at the Institute of Computational Medicine, Heidelberg University."
   location         : "Heidelberg, Germany"
