--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ana Victoria \n Ponce-Bobadilla"
+  name             : "Ana Victoria      Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
   bio              : "Applied Mathematician"
   location         : "Heidelberg, Germany"
