--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,11 @@
 # main links links
 main:
 
-  - title: "Research"
-    url: /research/  
-
   - title: "Publications"
     url: /publications/       
         
-  - title: "CV"
-    url: /cv/
+  - title: "CV [PDF]"
+    url: https://victoriapb.github.io/cv_15_12_19.pdf
 
   - title: "Contact"
     url: /contact/
