updated the publications

--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ana Victoria \n Ponce-Bobadilla"
+  name             : "Ana Victoria Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
-  bio              : "Applied Mathematician / Postdoctoral researcher / Systems biologist"
+  bio              : "Applied Mathematician Systems biologist Postdoctoral researcher"
   location         : "Heidelberg, Germany"
   employer         :
   pubmed           : 
