--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ana Victoria Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
-  bio              : "Applied Mathematician Systems biologist Postdoctoral researcher"
+  bio              : "Postdoctoral researcher Applied Mathematician Systems biologist"
   location         : "Heidelberg, Germany"
   employer         :
   pubmed           : 
