--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ana Victoria Ponce-Bobadilla"
+  name             : "Ana Victoria &nbsp; Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
   bio              : "Postdoctoral researcher Applied Mathematician Systems biologist"
   location         : "Heidelberg, Germany"
