updated with Bartosz comments

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Ana Victoria <br/> Ponce-Bobadilla"
   avatar           : "AVPB.jpg"
-  bio              : "Postdoctoral researcher Applied Mathematician Systems biologist"
+  bio              : "Postdoctoral Researcher Applied Mathematician Systems Biologist"
   location         : "Heidelberg, Germany"
   employer         :
   pubmed           : 
