fixed bu in linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ana-victoria-ponce-bobadilla-521627101/"
+  linkedin         : "ana-victoria-ponce-bobadilla-521627101/"
   orcid            : "https://orcid.org/0000-0002-0959-4058"
   pinterest        :
   soundcloud       :
