--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /publications/       
         
   - title: "CV"
-    url: https://victoriapb.github.io/cv_15_12_19.pdf
+    url: https://victoriapb.github.io/cv_AVPB.pdf
 
   - title: "Contact"
     url: /contact/
