--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /publications/       
         
   - title: "CV"
-    url: /CV/
+    url: /cv/
 
   - title: "Contact"
     url: /contact/
